--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroller</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 </head>
 
 <body>
-    <main>
+    <main id="root">
         <section>
             <img src="http://lorempixel.com/900/350" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum ex
