add scroller class and use it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Scroller</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="style.css">
+    <script src="Scroller.js"></script>
     <script src="index.js"></script>
 </head>
 
@@ -15,22 +16,26 @@
     <main id="root">
         <section>
             <img src="http://lorempixel.com/900/350" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum ex
+            <p>1. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum
+                ex
                 veniam culpa tempore soluta molestiae atque fuga illo et est illum numquam, necessitatibus mollitia.</p>
         </section>
         <section>
             <img src="http://lorempixel.com/900/350" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum ex
+            <p>2. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum
+                ex
                 veniam culpa tempore soluta molestiae atque fuga illo et est illum numquam, necessitatibus mollitia.</p>
         </section>
         <section>
             <img src="http://lorempixel.com/900/350" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum ex
+            <p>3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum
+                ex
                 veniam culpa tempore soluta molestiae atque fuga illo et est illum numquam, necessitatibus mollitia.</p>
         </section>
         <section>
             <img src="http://lorempixel.com/900/350" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum ex
+            <p>4. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor labore, aliquam sed animi aut nostrum
+                ex
                 veniam culpa tempore soluta molestiae atque fuga illo et est illum numquam, necessitatibus mollitia.</p>
         </section>
     </main>
