--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="scroller.css">
     <link rel="stylesheet" href="style.css">
     <script src="Scroller.js"></script>
+    <script src="swiper.js"></script>
     <script src="index.js"></script>
 </head>
 
